gateway/gatewayDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deploy
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      name: gateway
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: alexxus/microservicio-gateway:v7
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
