gateway/gatewayService.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  ports:
   # - protocol: TCP
    - port: 8088
      targetPort: 8088
  type: LoadBalancer
